@@ -742,10 +742,13 @@ by calling <function>clutter_actor_get_geometry()</function> and <function>clutt
 to use &clutter;'s <literal>cogl</literal> abstraction API which provides functions such as <function>cogl_rectangle()</function> 
 and <function>cogl_push_matrix()</function>.
 </para>
+
 <para>Most of the rest of <classname>ClutterActor</classname>'s virtual functions don't need to be reimplemented, because a suitable default implemention exists in 
 <classname>ClutterActor</classname>. For instance, 
 <function>show()</function>, <function>show_all()</function>, <function>hide()</function>, <function>hide_all()</function>, <function>pick()</function>, 
-<function>request_coord()</function>. TODO: However, mention show/hide_all() when we have containers again.
+<function>request_coord()</function>.
+
+<para>TODO: Explain what paint() should do.</para>
 </para>
 </sect1>
 
@@ -770,7 +773,8 @@ The following example demonstrates the implementation of a new triangle Actor ty
 <para>
 You can create container actors that arrange child actors by implementing the 
 ClutterContainer interface in your actor. You may use the <function>G_DEFINE_TYPE_WITH_CODE</function> 
-macro to specify that the type is derived from <classname>ClutterActor</classname>. For instance:
+macro to specify that the type is derived from <classname>ClutterActor</classname> 
+and also implements the <classname>ClutterContainer</classname> interface. For instance:
 <programlisting>
 static void clutter_container_iface_init (ClutterContainerIface *iface);
 
@@ -782,7 +786,7 @@ G_DEFINE_TYPE_WITH_CODE (ExampleContainer, example_container, CLUTTER_TYPE_ACTOR
 
 <sect2>
 <title>ClutterActor virtual functions to implement</title>
-<para>If your container should control the position or size of its chidlren then 
+<para>If your container should control the position or size of its children then 
 it should implement the <classname>ClutterActor</classname>'s 
 <function>request_coords()</function> and <function>query_coords()</function> 
 virtual functions.</para>
@@ -794,15 +798,19 @@ allocations.
 </para>
 
 <para>Your <function>query_coords()</function> implementation should 
-return the position and size desired by your coordinator, by setting the coordinates 
+return the position and size desired by your container, by setting the coordinates 
 in the <classname>ClutterActorBox</classname> output parameter. Depending on your 
 container, this might be dependent on the child actors. For instance, your container 
 might increase in size when it contains more child actors, ignoring any calls 
 to <function>clutter_actor_set_size()</function>. Alternatively, your container 
 might change the size of its child actors to fit the specified size.</para>
 
-<para>You should also implement the <function>paint()</function> function, usually 
-calling <function>clutter_actor_paint()</function> on the child actors.</para>
+<para>You should implement the <function>paint()</function> function, usually 
+calling <function>clutter_actor_paint()</function> on the child actors. All 
+containers should also implement the <function>pick()</function> function, calling 
+<function>clutter_actor_pick()</function> on each child actor.</para>
+<para>See the <link linkend="appendix-implementing-actorst">Custom Actor</link> 
+section for more details these virtual functions.</para>
 </sect2>
 
 <sect2>
@@ -819,7 +827,7 @@ resizing of the child actors. This repositioning would usually reuse the same
 algorithm that you used in your <function>request_coords()</function> implementation.
 </para>
 <para>Your <function>foreach</function> implementation would simply call the 
-provide callback on your container's list of child actors. Note that your container 
+provided callback on your container's list of child actors. Note that your container 
 could actually contain additional actors that are not considered to be child 
 actors for the purposes of add(), remove(), and foreach().</para>
 
